home table and createRFQ

--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
         <div class="nav-el"><button class="homebtn" onclick="goHome()">Home</button></div>
         <div class="nav-el">Procurement
             <div class="drop-list">
-                <button class="list-btn">Create RFQ</button>
+                <button class="list-btn" onclick="showPage('createRFQ')">Create RFQ</button>
                 <button class="list-btn">Process RFQ</button>
                 <button class="list-btn">Process Quotation</button>
                 <button class="list-btn">Rejected Quotations</button>
