--- a/suppDashboard.html
+++ b/suppDashboard.html
@@ -27,6 +27,12 @@
             </div>
         </div>
     </div>
+    <div class="navigation">
+        <button class="navBtn" onclick="prevPg()"><< Prev</button>
+        <button class="navBtn" onclick="nextPg()">>> Next</button>
+        <button class="navBtn"><a href="index.html">Logout</a></button>
+        <span class="navSpan">Welcome, User</span>
+    </div>
     <div class="goes-down-here"></div>
 <script src="dashingscr.js"></script>
 </body>
