Known bugs fixed. Ready for presentation

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,17 +16,18 @@
                 <button class="list-btn" onclick="showPage('processQuotation')">Process Quotation</button>
                 <button class="list-btn" onclick="showPage('thrownQuotation')">Rejected Quotations</button>
                 <button class="list-btn" onclick="showPage('purchaseReqAwaiting')">Purchase Request Awaiting Approval</button>
+                <button class="list-btn" onclick="showPage('processApprovedPR')">Process Approved Purchase Request</button>
                 <button class="list-btn" onclick="showPage('purchaseOrder2Binvoiced')">Processed Purchase Order</button>
                 <button class="list-btn" onclick="showPage('processDeliveryNote')">Process Delivery Note or Voucher</button>
-                <button class="list-btn" onclick="showPage('processApprovedPR')">Process Outstanding Items</button>
+                <button class="list-btn">Process Outstanding Items</button>
                 <button class="list-btn" onclick="showPage('submittedQuotation')">RFQ Status Report</button>
             </div>
         </div>
         <div class="nav-el">Accounts Payable
             <div class="drop-list">
-                <button class="list-btn">Track Invoice</button>
+                <button class="list-btn" onclick="showPage('trackInvoice')">Track Invoice</button>
                 <button class="list-btn">Request Approval List</button>
-                <button class="list-btn">Invoice Awaiting Approval</button>                
+                <button class="list-btn" onclick="showPage('invoiceAwaitingApproval')">Invoice Awaiting Approval</button>                
             </div>
         </div>
         <div class="nav-el">Budget Maintenance</div>
