--- a/suppDashboard.html
+++ b/suppDashboard.html
@@ -11,19 +11,19 @@
         <div class="nav-el"><button class="homebtn" onclick="goHome()">Home</button></div>
         <div class="nav-el">Request for Quotation
             <div class="drop-list">
-                <button class="list-btn">Available RFQ</button>
+                <button class="list-btn" onclick="showPage('availableRFQ')">Available RFQ</button>
             </div>
         </div>
         <div class="nav-el">Quotation
             <div class="drop-list">
-                <button class="list-btn">Submitted Quotation</button>
+                <button class="list-btn" onclick="showPage('submittedQuotation')">Submitted Quotation</button>
                 <button class="list-btn">Reports</button>
             </div>
         </div>
         <div class="nav-el">Purchase Order and Invoice
             <div class="drop-list">
                 <button class="list-btn">Approved Purchase Order</button>
-                <button class="list-btn">Purchase Order to be Invoiced</button>
+                <button class="list-btn" onclick="showPage('purchaseOrder2Binvoiced')">Purchase Order to be Invoiced</button>
             </div>
         </div>
     </div>
