--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="password" name="password" id="password">
         <div class="button-container">
             <button onclick="checkLogins()">Login</button>
-            <button>Create Account</button>
+            <button><a href="register.html">Create Account</a></button>
             <a class="enter"></a>
         </div>
     </div>
