--- a/register.html
+++ b/register.html
@@ -29,12 +29,12 @@
 
             <div class="buttons">
                 <button type="submit">Sign Up</button>
-                <button type="button" onclick="window.location.href='index.html'">Back to Login</button>
+                <button type="button" class="toLogin" onclick="window.location.href='index.html'">Back to Login</button>
 
             </div>
         </form>
     </div>
-    <script src="register.js"></script>
+    <script src="loginscr.js"></script>
 </body>
 
 </html>
