table data goes to mysql db

--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,11 @@
                 <button class="list-btn" onclick="showPage('invoiceAwaitingApproval')">Invoice Awaiting Approval</button>                
             </div>
         </div>
-        <div class="nav-el">Budget Maintenance</div>
+        <div class="nav-el">Budget Maintenance
+            <div class="drop-list">
+                <button class="list-btn" onclick="showPage('trackProgress')">Track Progress</button>
+            </div>
+        </div>
         <div class="nav-el">Services Maintenance</div>
         <div class="nav-el">System Administration</div>
     </div>
