GenerateRFQ and datetime field

--- a/dashboard.html
+++ b/dashboard.html
@@ -35,8 +35,11 @@
                 <button class="list-btn" onclick="showPage('trackProgress')">Track Progress</button>
             </div>
         </div>
-        <div class="nav-el">Services Maintenance</div>
-        <div class="nav-el">System Administration</div>
+        <div class="nav-el">Services Maintenance
+            <div class="drop-list">
+                <button class="list-btn" onclick="showPage('rateSuppliers')">Rate Suppliers</button>
+            </div>
+        </div>
     </div>
     <div class="navigation">
         <button class="navBtn" onclick="prevPg()"><< Prev</button>
