--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quid-Pro-Cure</title>
+    <title>PMS</title>
     <link rel="stylesheet" href="styling1.css">
 </head>
 <body>
     <div class="loginContainer">
-        <h1>Quid-Pro-Cure Login</h1>
+        <h1>PMS Login</h1>
         <label for="usertype">Login as:</label>
         <select name="usertype" id="usertype">
             <option value="Employee">Employee</option>
-            <option value="Supplier">Supplier</option>
+            <option value="Supplier">Accountant</option>
         </select>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username">
