--- a/register.html
+++ b/register.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quid-Pro-Cure Sign Up</title>
+    <title>PMS Sign Up</title>
     <link rel="stylesheet" href="register.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Quid-Pro-Cure Sign Up</h1>
+        <h1>PMS Sign Up</h1>
         <form id="signup-form">
             <label for="role">Sign up as:</label>
             <select id="role" name="role">
